feat: get current balance with loan and loan intereset
