# src/main/java/com/hei/wallet/wallety/endpoint/rest/controller/BalanceHistoryController.java
@@ -1,8 +1,11 @@
 package com.hei.wallet.wallety.endpoint.rest.controller;
 
+import com.hei.wallet.wallety.endpoint.rest.mapper.BalanceInfoMapper;
 import com.hei.wallet.wallety.endpoint.rest.mapper.BalanceMapper;
 import com.hei.wallet.wallety.endpoint.rest.model.Balance;
+import com.hei.wallet.wallety.endpoint.rest.model.BalanceInfo;
 import com.hei.wallet.wallety.service.BalanceHistoryService;
+import com.hei.wallet.wallety.service.LoanService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -14,7 +17,9 @@ import java.util.List;
 @RequiredArgsConstructor
 public class BalanceHistoryController {
     private final BalanceHistoryService balanceHistoryService;
+    private final LoanService loanService;
     private final BalanceMapper balanceMapper;
+    private final BalanceInfoMapper balanceInfoMapper;
 
     @GetMapping("/accounts/{idAccount}/balances")
     public List<Balance> getAllByAccountId(@PathVariable String idAccount){
@@ -26,9 +31,7 @@ public class BalanceHistoryController {
     }
 
     @GetMapping("/accounts/{idAccount}/balances/current")
-    public Balance getCurrentAccountBalance(@PathVariable String idAccount){
-        return balanceMapper.toApi(
-            balanceHistoryService.getCurrentAccountBalance(idAccount)
-        );
+    public BalanceInfo getCurrentAccountBalance(@PathVariable String idAccount){
+        return balanceInfoMapper.toApi(loanService.getCurrentBalanceWithLoan(idAccount));
     }
 }
