# src/main/java/com/hei/wallet/wallety/model/BalanceInfo.java
@@ -1,0 +1,19 @@
+package com.hei.wallet.wallety.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.io.Serializable;
+import java.math.BigDecimal;
+
+@AllArgsConstructor
+@Builder
+@NoArgsConstructor
+@Data
+public class BalanceInfo implements Serializable {
+    private BalanceHistory balance;
+    private BigDecimal loan;
+    private float loanInterest;
+}
